<resources>
    <string name="app_name">Drink Shop App</string>
    <string name="imgBBApiKey">495a088ac626a56db20a5c7f7c700171</string>
    <string name="contNue">Continue</string>
    <string name="drink_app">Drink App</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_date_of_birth">Enter your date of birth</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="select_date_of_birth">Select Date of birth</string>
    <string name="title_activity_home_page">Order a drink</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="percent"> %  </string>
    <string name="menu_logout">Log out</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="login">Login</string>
    <string name="available_products">Available Drink Menu</string>
    <string name="price">Price : GHC </string>
    <string name="gh"> GHC %s </string>
    <string name="ghc3">GHC 3</string>
    <string name="ghc5">GHC 5</string>
    <string name="sugar">Sugar %s </string>
    <string name="ice">Ice %s </string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="cart_item_name">Cart Item Name</string>
    <string name="select_your_cup_size">Select your cup size</string>
    <string name="required">Required</string>
    <string name="medium_size">Medium Size</string>
    <string name="large_size">Large size</string>
    <string name="choose_sugar">Choose Sugar</string>
    <string name="_100">100% - Very sweet</string>
    <string name="_75">75% - Sweet</string>
    <string name="_50">50% - Tasty</string>
    <string name="_25">25% - Not too Sweet</string>
    <string name="no_sugar">No Sugar</string>
    <string name="choose_ice">Choose Ice</string>
    <string name="no_ice">No Ice - warm</string>
    <string name="_100ice">100% - Iced</string>
    <string name="_75ice">75% - Broken ice</string>
    <string name="_50ice">50% - Moderate ice</string>
    <string name="_25ice">25% - Small Ice pieces</string>
    <string name="comment_here">Comment here</string>
    <string name="menu_cat">Menu Categories</string>
    <string name="toppings">Toppings</string>
    <string name="toppings_added">Toppings Added</string>
    <string name="cart_item">Cart Item</string>
    <string name="place_order">Place Order</string>
    <string name="cart_item_image">Cart item image</string>
    <string name="favorite">favorite</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="no_items_found_in_your_favorites">No items found in your favorites</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>

</resources>
