<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_insetEdge="bottom">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/imgItemPhoto"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ace" />

            <TextView
                android:id="@+id/txtCartName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/cart_item_name"
                app:layout_constraintBottom_toTopOf="@+id/cartCounter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgItemPhoto"
                app:layout_constraintTop_toTopOf="@+id/imgItemPhoto" />

            <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                android:id="@+id/cartCounter"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:fitsSystemWindows="true"
                android:visibility="visible"
                app:backGroundColor="@color/colorGreen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/imgItemPhoto"
                app:textColor="#fff" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment_here" />
    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/addToCart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtComment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:weightSum="3">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/select_your_cup_size"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/add_to_cart_bg"
                    android:gravity="center"
                    android:text="@string/required"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:weightSum="3">

                <RadioGroup
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioBtnMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/medium_size" />

                    <RadioButton
                        android:id="@+id/radioBtnLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/large_size" />

                </RadioGroup>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/mediumPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right|end"
                        android:text="@string/ghc"
                        android:textSize="18sp"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right|end"
                        android:text="@string/ghc"
                        android:textSize="18sp"
                        android:textStyle="italic" />
                </androidx.appcompat.widget.LinearLayoutCompat>



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/choose_sugar"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/add_to_cart_bg"
                    android:gravity="center"
                    android:text="@string/required"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:weightSum="3">

                <RadioGroup
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioBtnSugar100"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_100" />

                    <RadioButton
                        android:id="@+id/radioBtnSugar70"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_70" />

                    <RadioButton
                        android:id="@+id/radioBtnSugar50"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_50" />

                    <RadioButton
                        android:id="@+id/radioBtnSugar25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_25" />

                    <RadioButton
                        android:id="@+id/radioBtnSugarFree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_sugar" />

                </RadioGroup>




            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/choose_ice"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/add_to_cart_bg"
                    android:gravity="center"
                    android:text="@string/required"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="italic" />




            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/radioBtnIce100"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_100ice" />

                    <RadioButton
                        android:id="@+id/radioBtnIce70"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_70ice" />

                    <RadioButton
                        android:id="@+id/radioBtnIce50"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_50ice" />

                    <RadioButton
                        android:id="@+id/radioBtnIce25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_25ice" />

                    <RadioButton
                        android:id="@+id/radioBtnNoIce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_ice" />

                </RadioGroup>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/addToCart"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
